fixed history/footer overlap issue

--- a/src/assets/globalStyles.css
+++ b/src/assets/globalStyles.css
@@ -2,7 +2,7 @@
     font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
 } */
 body {
-    height: 100%;
+    /* height: 100%; */
     font-family: "SF Pro Text", "SF Pro Icons", "AOS Icons", "Helvetica Neue", Helvetica, Arial, sans-serif;
     display: flex;
     flex-direction: column;
@@ -11,6 +11,7 @@ body {
 
 #app, .n-config-provider {
     height: 100%;
+    max-height: 100%;
     width: 100%;
     margin: 0;
     /* max-width: 1200px; */
@@ -29,15 +30,34 @@ body {
     padding: 0;
 }
 
-.projectsContainer {
-    max-width: 1200px;
-    width: 1200px;
-}
+/* .webContainer {
+    height: 100%;
+} */
 
 .landingContainer {
     height: 420px;
     padding: 100px 3%;
 }
+
+.jdLandingContainer {
+    height: 420px;
+    padding: 0 0%;
+    max-width: 900px;
+    margin: 0;
+    /* -webkit-align-self: flex-start; */
+    /* -ms-flex-item-align: start; */
+    /* align-self: flex-start; */
+    /* line-height: 1.05; */
+    /* text-align: left; */
+    /* margin-bottom: 48px; */
+    /* color: #0d0e10; */
+    /* font-size: 68px; */
+}
+
+/* .projectsContainer {
+    max-width: 1200px;
+    width: 1200px;
+} */
 
 .aboutContainer {
     height: 700px;
@@ -45,7 +65,7 @@ body {
 }
 
 .historyContainer {
-    height: 600px;
+    /* height: 600px; */
     padding: 140px 3%;
 }
 
@@ -128,4 +148,10 @@ h4 {
     letter-spacing: 0.5px;
     transition: all 300ms ease;
     text-decoration: none;
+}
+
+.jdH1 {
+    font-size: 68px;
+    color: #0d0e10;
+
 }
